ETH marketplace with smart contracts to share & tip social posts

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Starter Kit",
-  "name": "Dapp University Starter Kit",
+  "name": "Ethereum Social Network",
   "icons": [
     {
       "src": "favicon.ico",
